# rusty-reporting-service

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
src/: bph_reports.rs  iqvia_reporting_jobs.rs  main.rs  manager.rs  managers.rs  reporting.rs  rrs.rs  task_managers.rs  tasks.rs
src/reporting/: reporters.rs  reports.rs  schedulers.rs  schedules.rs  util.rs
